# crewai

./: .env.example  README.md  pyproject.toml
db/: chroma.sqlite3
docs/feature/deep_research_integration/: README.md  examples.py  implementation_plan.md  implementation_tracker.md
output/: curriculum_inputs.json
output/Applied_AI/Module_1/Week_1/Session_1/Classwork/: course_material.md  slides_presentation.md
output/Applied_AI/Module_1/Week_1/Session_1/Homework/: homework_keys.md  homework_questions.md
output/Quantum_physics/Course_Overview_and_Guide/: assessment_rubrics.md  course_overview.md  implementation_schedule.md  instructor_guide.md
output/Quantum_physics/Module_1/Week_1/Session_1/Classwork/: course_material.md  slides_presentation.md
output/Quantum_physics/Module_1/Week_1/Session_1/Homework/: homework_keys.md  homework_questions.md
output/Quantum_physics/Module_1/Week_2/Session_2/Classwork/: course_material.md  slides_presentation.md
output/Quantum_physics/Module_1/Week_2/Session_2/Homework/: homework_keys.md  homework_questions.md
output/Quantum_physics/Module_2/Week_3/Session_3/Classwork/: course_material.md  (+1 more)
research/: Dockerfile  docker-compose.yml  monitor.Dockerfile  requirements-monitor.txt
src/comprehensive_curriculum_creator/: crew.py  main.py
src/comprehensive_curriculum_creator/config/: agents.yaml  research_config.yaml  tasks.yaml
src/comprehensive_curriculum_creator/tools/: custom_tool.py  deep_research_tool.py
tests/integration/: test_curriculum_with_deep_research.py
tests/unit/: test_deep_research_integration.py
(+3 files in other folders)
