[project]
name = "comprehensive_curriculum_creator"
version = "0.1.0"
description = "comprehensive_curriculum_creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13.2"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "pydantic>=2.0.0",
    "pathlib2>=2.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tavily-python>=0.7.11",
]

[project.scripts]
comprehensive_curriculum_creator = "comprehensive_curriculum_creator.main:run"
run_crew = "comprehensive_curriculum_creator.main:run"
train = "comprehensive_curriculum_creator.main:train"
replay = "comprehensive_curriculum_creator.main:replay"
test = "comprehensive_curriculum_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
